--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <link rel="icon" type="image/svg+xml" href="/wackie-favicon-2.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <meta name="theme-color" content="#FAF9F7" />
+
+    <!-- Open Graph / Link Preview -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Wackie Wedding" />
+    <meta property="og:description" content="Coming Soon" />
+    <meta property="og:image" content="https://wackie.wedding/og_image.png" />
+    <meta property="og:url" content="https://wackie.wedding" />
+
+    <!-- Twitter/iMessage -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Wackie Wedding" />
+    <meta name="twitter:description" content="Coming Soon" />
+    <meta name="twitter:image" content="https://yourdomain.com/og-image.png" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
