--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Wackie Wedding" />
     <meta name="twitter:description" content="Coming Soon" />
-    <meta name="twitter:image" content="https://yourdomain.com/og-image.png" />
+    <meta name="twitter:image" content="https://wackie.wedding/og_image.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
